...
        app:errorEnabled="true"
        app:errorText="@{@string/error_invalid_name}"
        app:validity="@{profile.validityFlag}"
        app:validityFlag="@{ProfileFactoryActivity.FLAG_NAME}">

        <cz.zcu.fav.remotestimulatorcontrol.widget.repairededittext.RepairedEditText
            android:id="@+id/editConfigurationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/configuration_name"
            android:inputType="textPersonName"
...
